--- a/EXAMPLE_MCMC4.yaml
+++ b/EXAMPLE_MCMC4.yaml
@@ -7,9 +7,8 @@ likelihood:
     path: ./external_modules/data/des_y3
     data_file: DES_Y1_real.dataset
     accuracyboost: 1.0
-    samplingboost: 1.0
-    integration_accuracy: 0 # integer 0, 1 or 2
-    kmax_boltzmann: 10.0
+    integration_accuracy: 0
+    kmax_boltzmann: 5.0
 
 params:
   As_1e9:
