--- a/EXAMPLE_POLY1.yaml
+++ b/EXAMPLE_POLY1.yaml
@@ -299,46 +299,14 @@ theory:
       k_per_logint: 20
 
 sampler:
-  mcmc:
-    # ---------------------------------------------------------------------
-    # File (w/ path) or matrix defining a covariance matrix for the proposal:
-    # - null (default): will be generated from params info (prior and proposal)
-    # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
-    covmat_params:
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Proposal covariance matrix learning
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    learn_proposal: True
-    # Don't learn if convergence better than...
-    learn_proposal_Rminus1_min: 0.035
-    # Don't learn if convergence is worse than...
-    learn_proposal_Rminus1_max: 150
-    # (even earlier if a param is not in the given covariance matrix)
-    learn_proposal_Rminus1_max_early: 300.
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Convergence and stopping
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Maximum number of posterior evaluations
-    max_samples: .inf
-    # Gelman-Rubin R-1 on means
-    Rminus1_stop: 0.02
-    # Gelman-Rubin R-1 on std deviations
-    Rminus1_cl_stop: 0.2
-    Rminus1_cl_level: 0.95
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Exploiting speed hierarchy
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    measure_speeds: False
-    drag: False
-    oversample_power: 0.3
-    oversample_thin: True
+  polychord:
+    path: null
+    nlive: 128
+    num_repeats: 2d
+    do_clustering: false
+    precision_criterion: 0.001
+    boost_posterior: 10
+    feedback: 2
     blocking:
       - [1,
           [
@@ -356,19 +324,5 @@ sampler:
             DES_M1, DES_M2, DES_M3, DES_M4
           ]
         ]
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Avoid chain getting suck forever
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    max_tries: 10000
-    burn_in: 0
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # When no MPI used, number of fractions of the chain to compare
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    Rminus1_single_split: 4
 
-
-output: ./projects/des_y3/chains/EXAMPLE_MCMC1
+output: ./projects/des_y3/chains/EXAMPLE_POLY1
