--- a/EXAMPLE_POLY2.yaml
+++ b/EXAMPLE_POLY2.yaml
@@ -3,7 +3,7 @@ debug: False
 stop_at_error: False
 
 likelihood:
-  des_y3.des_cosmic_shear:
+  des_y3.des_3x2pt:
     path: ./external_modules/data/des_y3
     data_file: DES_Y3_real.dataset
     accuracyboost: 1.0
@@ -92,7 +92,7 @@ params:
     value: 0.0697186
     latex: \tau_\mathrm{reio}
   # ----------------------------------------------------------------------------
-  # DES-Y3 CS nuissance parameter Start
+  # DES-Y3 3x2pt nuissance parameter begins
   # ----------------------------------------------------------------------------
   # ----------------------------------------------------------------------------
   # DES-Y3 SOURCE VALUES FROM TABLE I, PAGE 11 of 2105.13549
@@ -235,8 +235,104 @@ params:
       scale: 0.15
     proposal: 0.1
   # ----------------------------------------------------------------------------
-  # DES-Y3 CS nuissance parameter End
+  # DES-Y3 LENS VALUES FROM TABLE IV, PAGE 34 of 2105.13549
   # ----------------------------------------------------------------------------
+  # Lensing photo-z errors
+  DES_DZ_L1:
+    prior:
+      dist: norm
+      loc: 0.006
+      scale: 0.004
+    ref:
+      dist: norm
+      loc: 0.006
+      scale: 0.004
+    proposal: 0.002
+    latex: \Delta z_\mathrm{l,DES}^1
+  DES_DZ_L2:
+    prior:
+      dist: norm
+      loc: 0.001
+      scale: 0.003
+    ref:
+      dist: norm
+      loc: 0.0001
+      scale: 0.003
+    proposal: 0.001
+    latex: \Delta z_\mathrm{l,DES}^2
+  DES_DZ_L3:
+    prior:
+      dist: norm
+      loc: 0.004
+      scale: 0.003
+    ref:
+      dist: norm
+      loc: 0.0004
+      scale: 0.003
+    proposal: 0.001
+    latex: \Delta z_\mathrm{l,DES}^3
+  DES_DZ_L4:
+    prior:
+      dist: norm
+      loc: -0.002
+      scale: 0.005
+    ref:
+      dist: norm
+      loc: -0.002
+      scale: 0.005
+    proposal: 0.002
+    latex: \Delta z_\mathrm{l,DES}^4
+  DES_DZ_L5:
+    prior:
+      dist: norm
+      loc: -0.007
+      scale: 0.01
+    ref:
+      dist: norm
+      loc: -0.007
+      scale: 0.01
+    proposal: 0.005
+    latex: \Delta z_\mathrm{l,DES}^5
+  # ----------------------------------------------------------------------------
+  # DES-Y3 LENS VALUES FROM TABLE IV, PAGE 34 of 2105.13549
+  # Table IV adopts Cosmolike convention BMAG_COSMOLIKE = 2 BMAG_COSMOSIS - 1
+  # ----------------------------------------------------------------------------
+  DES_BMAG_1:
+    value: 0.63
+    latex: b_\mathrm{BMAG-DES}^1
+  DES_BMAG_2:
+    value: -3.04
+    latex: b_\mathrm{BMAG-DES}^2
+  DES_BMAG_3:
+    value: -1.33
+    latex: b_\mathrm{BMAG-DES}^3
+  DES_BMAG_4:
+    value: 2.50
+    latex: b_\mathrm{BMAG-DES}^4
+  DES_BMAG_5:
+    value: 1.93
+    latex: b_\mathrm{BMAG-DES}^5
+  # ----------------------------------------------------------------------------
+  # POINT MASS MARGINALIZATION (not following DES paper here)
+  # ----------------------------------------------------------------------------
+  DES_PM1:
+    value: 0.0
+    latex: PM_\mathrm{DES}^1
+  DES_PM2:
+    value: 0.0
+    latex: PM_\mathrm{DES}^2
+  DES_PM3:
+    value: 0.0
+    latex: PM_\mathrm{DES}^3
+  DES_PM4:
+    value: 0.0
+    latex: PM_\mathrm{DES}^4
+  DES_PM5:
+    value: 0.0
+    latex: PM_\mathrm{DES}^5
+  # ---------------------------------------------------------------------------------------
+  # DES-Y3 3x2pt nuissance parameter End
+  # ---------------------------------------------------------------------------------------
   # ---------------------------------------------------------------------------------------
   # ------------------------------------- DERIVED PARAMETERS ------------------------------
   # ---------------------------------------------------------------------------------------
@@ -290,8 +386,8 @@ theory:
     use_renames: True
     extra_args:
       halofit_version: takahashi
-      AccuracyBoost: 1.05
-      lens_potential_accuracy: 1
+      AccuracyBoost: 1.1
+      lens_potential_accuracy: 1.0
       num_massive_neutrinos: 1
       nnu: 3.046
       dark_energy_model: ppf
@@ -299,76 +395,32 @@ theory:
       k_per_logint: 20
 
 sampler:
-  mcmc:
-    # ---------------------------------------------------------------------
-    # File (w/ path) or matrix defining a covariance matrix for the proposal:
-    # - null (default): will be generated from params info (prior and proposal)
-    # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
-    covmat_params:
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Proposal covariance matrix learning
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    learn_proposal: True
-    # Don't learn if convergence better than...
-    learn_proposal_Rminus1_min: 0.035
-    # Don't learn if convergence is worse than...
-    learn_proposal_Rminus1_max: 150
-    # (even earlier if a param is not in the given covariance matrix)
-    learn_proposal_Rminus1_max_early: 300.
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Convergence and stopping
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Maximum number of posterior evaluations
-    max_samples: .inf
-    # Gelman-Rubin R-1 on means
-    Rminus1_stop: 0.02
-    # Gelman-Rubin R-1 on std deviations
-    Rminus1_cl_stop: 0.2
-    Rminus1_cl_level: 0.95
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Exploiting speed hierarchy
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    measure_speeds: False
-    drag: False
-    oversample_power: 0.3
-    oversample_thin: True
+  polychord:
+    path: null
+    nlive: 128
+    num_repeats: 2d
+    do_clustering: false
+    precision_criterion: 0.001
+    boost_posterior: 10
+    feedback: 2
     blocking:
       - [1,
           [
             As_1e9, ns, H0, omegab, omegam, w0pwa, w
           ]
         ]
-      - [3,
+      - [2,
           [
             DES_DZ_S1, DES_DZ_S2, DES_DZ_S3, DES_DZ_S4, 
-            DES_A1_1, DES_A1_2, DES_A2_1, DES_A2_2, DES_BTA_1
+            DES_A1_1, DES_A1_2, DES_A2_1, DES_A2_2, DES_BTA_1, 
+            DES_B1_1, DES_B1_2, DES_B1_3, DES_B1_4, DES_B1_5,
+            DES_DZ_L1, DES_DZ_L2, DES_DZ_L3, DES_DZ_L4, DES_DZ_L5
           ]
         ]
-      - [15,
+      - [20,
           [
-            DES_M1, DES_M2, DES_M3, DES_M4
+            DES_M1, DES_M2, DES_M3, DES_M4 
           ]
         ]
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Avoid chain getting suck forever
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    max_tries: 10000
-    burn_in: 0
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # When no MPI used, number of fractions of the chain to compare
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    Rminus1_single_split: 4
 
-
-output: ./projects/des_y3/chains/EXAMPLE_MCMC1
+output: ./projects/des_y3/chains/EXAMPLE_POLY2
