--- a/EXAMPLE_POLY3.yaml
+++ b/EXAMPLE_POLY3.yaml
@@ -5,9 +5,9 @@ stop_at_error: False
 likelihood:
   des_y3.des_cosmic_shear:
     path: ./external_modules/data/des_y3
-    data_file: DES_Y3_real.dataset
+    data_file: DES_Y1_real.dataset
     accuracyboost: 1.0
-    integration_accuracy: 1
+    integration_accuracy: 0
     kmax_boltzmann: 5.0
 
 params:
@@ -92,98 +92,95 @@ params:
     value: 0.0697186
     latex: \tau_\mathrm{reio}
   # ----------------------------------------------------------------------------
-  # DES-Y3 CS nuissance parameter Start
-  # ----------------------------------------------------------------------------
-  # ----------------------------------------------------------------------------
-  # DES-Y3 SOURCE VALUES FROM TABLE I, PAGE 11 of 2105.13549
+  # DES-Y1 CS nuissance parameter Start
   # ----------------------------------------------------------------------------
   DES_DZ_S1:
     prior:
       dist: norm
-      loc: 0.0
-      scale: 0.018
+      loc: -0.001
+      scale: 0.016
     ref:
       dist: norm
-      loc: 0.0
-      scale: 0.018
+      loc: -0.001
+      scale: 0.016
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^1
   DES_DZ_S2:
     prior:
       dist: norm
-      loc: 0.0
-      scale: 0.015
+      loc: -0.019
+      scale: 0.013
     ref:
       dist: norm
-      loc: 0.0
-      scale: 0.015
+      loc: -0.019
+      scale: 0.013
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^2
   DES_DZ_S3:
     prior:
       dist: norm
-      loc: 0.0
+      loc: 0.009
       scale: 0.011
     ref:
       dist: norm
-      loc: 0.0
+      loc: 0.009
       scale: 0.011
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^3
   DES_DZ_S4:
     prior:
       dist: norm
-      loc: 0.0
-      scale: 0.017
+      loc: -0.018
+      scale: 0.022
     ref:
       dist: norm
-      loc: 0.0
-      scale: 0.017
+      loc: -0.018
+      scale: 0.022
     proposal: 0.005
     latex: \Delta z_\mathrm{s,DES}^4
   DES_M1:
     prior:
       dist: norm
-      loc: -0.006
-      scale: 0.009
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.006
-      scale: 0.009
-    proposal: 0.004
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^1
   DES_M2:
     prior:
       dist: norm
-      loc: -0.02
-      scale: 0.008
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.02
-      scale: 0.008
-    proposal: 0.004
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^2
   DES_M3:
     prior:
       dist: norm
-      loc: -0.024
-      scale: 0.008
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.024
-      scale: 0.008
-    proposal: 0.004
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^3
   DES_M4:
     prior:
       dist: norm
-      loc: -0.037
-      scale: 0.008
+      loc: 0.012
+      scale: 0.023
     ref:
       dist: norm
-      loc: -0.037
-      scale: 0.008
-    proposal: 0.003
+      loc: 0.012
+      scale: 0.023
+    proposal: 0.005
     latex: m_\mathrm{DES}^4
   DES_A1_1:
     prior:
@@ -205,38 +202,18 @@ params:
       scale: 0.5
     proposal: 0.5
     latex: A_\mathrm{1-IA,DES}^2
-  DES_A2_1:
-    prior:
-      min: -5
-      max:  5
-    ref:
-      dist: norm
-      loc: -1.36
-      scale: 0.5
-    proposal: 0.5
-    latex: A_\mathrm{2-IA,DES}^1
-  DES_A2_2:
-    prior:
-      min: -5
-      max:  5
-    ref:
-      dist: norm
-      loc: -2.5
-      scale: 0.5
-    proposal: 0.5
+  DES_A2_1: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
+    value: 0.0
+    latex: A_\mathrm{2-IA,DES}^1 
+  DES_A2_2: #TATT, not used for Y1  (IA = 4 on cosmolike which does't even consider these params)
+    value: 0.0
     latex: A_\mathrm{2-IA,DES}^2
-  DES_BTA_1:
-    prior:
-      min: 0
-      max: 2
-    ref:
-      dist: norm
-      loc: 1
-      scale: 0.15
-    proposal: 0.1
-  # ----------------------------------------------------------------------------
-  # DES-Y3 CS nuissance parameter End
-  # ----------------------------------------------------------------------------
+  DES_BTA_1: #TATT, not used for Y1 (IA = 4 on cosmolike which does't even consider these params)
+    value: 1.0
+    latex: A_\mathrm{BTA-IA,DES}^1
+  # ---------------------------------------------------------------------------------------
+  # DES-Y1 CS nuissance parameter End
+  # ---------------------------------------------------------------------------------------
   # ---------------------------------------------------------------------------------------
   # ------------------------------------- DERIVED PARAMETERS ------------------------------
   # ---------------------------------------------------------------------------------------
@@ -299,76 +276,30 @@ theory:
       k_per_logint: 20
 
 sampler:
-  mcmc:
-    # ---------------------------------------------------------------------
-    # File (w/ path) or matrix defining a covariance matrix for the proposal:
-    # - null (default): will be generated from params info (prior and proposal)
-    # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
-    covmat_params:
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Proposal covariance matrix learning
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    learn_proposal: True
-    # Don't learn if convergence better than...
-    learn_proposal_Rminus1_min: 0.035
-    # Don't learn if convergence is worse than...
-    learn_proposal_Rminus1_max: 150
-    # (even earlier if a param is not in the given covariance matrix)
-    learn_proposal_Rminus1_max_early: 300.
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Convergence and stopping
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Maximum number of posterior evaluations
-    max_samples: .inf
-    # Gelman-Rubin R-1 on means
-    Rminus1_stop: 0.02
-    # Gelman-Rubin R-1 on std deviations
-    Rminus1_cl_stop: 0.2
-    Rminus1_cl_level: 0.95
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Exploiting speed hierarchy
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    measure_speeds: False
-    drag: False
-    oversample_power: 0.3
-    oversample_thin: True
+  polychord:
+    path: null
+    nlive: 128
+    num_repeats: 2d
+    do_clustering: false
+    precision_criterion: 0.001
+    boost_posterior: 10
+    feedback: 2
     blocking:
       - [1,
           [
             As_1e9, ns, H0, omegab, omegam, w0pwa, w
           ]
         ]
-      - [3,
+      - [6,
           [
             DES_DZ_S1, DES_DZ_S2, DES_DZ_S3, DES_DZ_S4, 
-            DES_A1_1, DES_A1_2, DES_A2_1, DES_A2_2, DES_BTA_1
+            DES_A1_1, DES_A1_2
           ]
         ]
-      - [15,
+      - [20,
           [
             DES_M1, DES_M2, DES_M3, DES_M4
           ]
         ]
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # Avoid chain getting suck forever
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    max_tries: 10000
-    burn_in: 0
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    # When no MPI used, number of fractions of the chain to compare
-    # ---------------------------------------------------------------------
-    # ---------------------------------------------------------------------
-    Rminus1_single_split: 4
-
-
-output: ./projects/des_y3/chains/EXAMPLE_MCMC1
+        
+output: ./projects/des_y3/chains/EXAMPLE_POLY3
